--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "less-loader": "^4.0.5",
     "mockjs": "^1.0.1-beta3",
     "mongoose": "^5.0.0-rc0",
+    "muse-ui": "^2.1.0",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
